# bird-identification

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  rebuild.sh  requirements.txt
api/: Dockerfile  README.md  api.py  rebuild.sh  requirements.txt  security.py  settings.py
app/: LICENSE.txt  README-Windows.md  README.md  Run model.ipynb  THIRD_PARTY_LICENSES.txt  analyze_process.py  app.ifp  app.py  app.spec  build-windows-conda.bat  build-windows.bat  build-windows.ps1  build_dmg.sh  classifier.py  functions.py  handle_files.py  main.py  main_report.py  replace_version.py  requirements-conda-forced.yml  requirements-conda-hybrid.yml  requirements-conda-minimal.yml  requirements-conda-simple.yml  requirements-conda-windows.yml  requirements-macos-arm64.txt  requirements-windows-x64-simple.txt  requirements-windows-x64.txt  requirements.txt  requirements_tf.txt  resize_icons.sh  resources.py  resources.qrc  run_model.py  start-dev.sh  stats_functions.py  version_info.txt  version_info_analyze.txt
cli/: Dockerfile  README.md  analyze_directory.py  handle_files.py  main.py  main_report.py  requirements.txt  stats_functions.py
config/: uvicorn_start.example
input/: readme.txt
models/: classes.csv  license_birdnet.txt  readme.txt
scripts/: api.py  app_parameters.py  classifier.py  functions.py  handle_files.py  main.py  main_report.py  pydantic_parameters.py  run_model.py  security.py  settings.py  utils.py
shared/: classifier.py  classifier_config.py  functions.py  pydantic_parameters.py  run_model.py
(+73 files in other folders)
